0905/lion-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortune-nodeport
spec:
  type: NodePort
  selector:
    app: fortune
  ports:
    - port: 80
