0905/lion-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lion
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ...
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lion-app-nodeport
                port:
                  number: 8000
